# sevise

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
services/: chunking.py  embeddings.py  rag.py  search.py  semantic_search.py  transcription.py  video_input.py  yt_vid_downloader.py
